--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 
 <body class="bindex d-flex flex-column">
   <header>
-    <nav class=" navbar navbar-expand-lg bg-light animate__animated animate__fadeInDownBig d-flex flex-column justify-content-center aligin-items-center w-100">
-        <a class="navbar-brand" href="./index.html">Los2Primos</a>
+    <nav class=" navbar navbar-expand-lg bg-light animate__animated animate__fadeInDownBig">
+      <div class="container-fluid d-flex flex-column justify-content-center aligin-items-center w-100 ">
+      <a class="navbar-brand " href="./index.html">Los2Primos</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -49,63 +50,69 @@
           </ul>
         </div>
       </div>
+    </div>
     </nav>
   </header>
   <!---main--->
-  <main>
-    <h1 class=" titulo_bienvenida text-center">
+  <main class="hero">
+    <h1 class=" titulo_bienvenida text-center logo-media mt-2">
       Bienvenidos a indumetaria Los2Primos</h1>
-  </main>
-  <section class="container-fluid d-flex flex-column justify-content-center aligin-items-center">
-
-    <div class="row ">
+  <section class=" container-fluid d-flex flex-column justify-content-center aligin-items-center">
+       <div class="row  ">
       <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center ">
-        <img src="./imagenes/campera_nena1.jpg"  class="img_niñex rounded float-start mw-100 rounded" alt="campera para niñas">
+        <img src="./imagenes/campera_nena1.jpg"  class="alto-icono rounded float-start mw-100 rounded" alt="campera para niñas">
       </div>
       <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center  "><img
-          src="./imagenes/boy (1).jpg" class="img_niñex rounded mx-auto d-block mw-100 rounded" alt="remera para niños">
+          src="./imagenes/boy (1).jpg" class="alto-icono rounded mx-auto d-block mw-100 rounded" alt="remera para niños">
       </div>
       <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center "><img
-          src="./imagenes/pantalon_nena2.jpg" class="img_niñex rounded float-end mw-100 rounded" alt="pantalon para niñas">
+          src="./imagenes/pantalon_nena2.jpg" class="alto-icono rounded float-end mw-100 rounded" alt="pantalon para niñas">
       </div>
   </section>
-  <section class="container-fluid">
+  <section class="container-fluid d-flex flex-column justify-content-center aligin-items-center">
     
-    <div class="row">
+    <div class="row ">
       <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-          src="./imagenes/pantalon2.jpg" class=" img_niñex rounded float-start mw-100 rounded" alt="pantalon para niñas">
+          src="./imagenes/pantalon2.jpg" class=" alto-icono rounded float-start mw-100 rounded" alt="pantalon para niñas">
       </div>
       <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-          src="./imagenes/campera_nena2.jpg" class=" img_niñex rounded mx-auto d-block mw-100 rounded "
+          src="./imagenes/campera_nena2.jpg" class=" alto-icono rounded mx-auto d-block mw-100 rounded "
           alt="campera para niñas">
       </div>
       <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-          src="./imagenes/boy3.jpg" class=" img_niñex rounded float-end mw-100 rounded " alt="remeras para niños">
+          src="./imagenes/boy3.jpg" class=" alto-icono rounded float-end mw-100 rounded " alt="remeras para niños">
       </div>
   </section>
-  <section class="container-fluid ">
+  <section class="container-fluid d-flex flex-column justify-content-center aligin-items-center ">
  
-    <div class="row ">
+    <div class="row pb-3 ">
       <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-          src="./imagenes/remeragirld.jpg" class="img_niñex rounded float-start rounded mw-100 rounded   "
+          src="./imagenes/remeragirld.jpg" class="alto-icono rounded float-start rounded mw-100 rounded   "
           alt="remera para niñas">
       </div>
       <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-          src="./imagenes/pantalon3.jpg" class=" img_niñex rounded mx-auto d-block rounded mw-100 rounded "
+          src="./imagenes/pantalon3.jpg" class=" alto-icono rounded mx-auto d-block rounded mw-100 rounded "
           alt="pantalon para niños">
       </div>
       <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-          src="./imagenes/campera_nena3.jpg" class="img_niñex rounded float-end  mw-100 rounded" alt="campera para niñas">
+          src="./imagenes/campera_nena3.jpg" class="alto-icono rounded float-end  mw-100 rounded" alt="campera para niñas">
       </div>
     </div>
   </section>
+</main>
   <!---pie--->
-  <footer >
-    <div class=" d-flex flex-column justify-content-center align-items-center">
-      <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram mt-2"></i></a>
-     <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook mt-2"></i></a>
-      <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp mt-2"></i></a>
-   </div>
+  <footer class=" pt-3">
+    <div class="text-center d-flex justify-content-center align-items-center flex-column">
+      <div class="redes">
+        <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram "></i></a>
+        <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook "></i></a>
+         <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp pb-2 "></i></a>
+       </div>
+      <div>
+        <h6>Todos los derechos reservados ©</h6>
+        <h6>By Los2Primos</h6>
+    </div>
+  </div> 
   </footer>
   <!---script bootstrap--->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
