--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -53,10 +53,10 @@
   </nav>
   <!---main--->
   <main>
-    <article class="container d-flex flex-column">
+    <article class="container-fluid d-flex flex-column justify-content-center aligin-items-center">
 
-      <h1 class=" titulo fs-1 d-flex justify-content-center aligin-items-center"> todavia no te registraste?</h1>
-      <p class=" parrafo fs-5 fst-italic justify-content-center aligin-items-center w-100">Lorem, ipsum dolor sit amet
+      <h1 class="logo-media fs-1 d-flex justify-content-center aligin-items-center"> todavia no te registraste?</h1>
+      <p class=" logo-media fs-5 fst-italic justify-content-center aligin-items-center w-100">Lorem, ipsum dolor sit amet
         consectetur adipiicing elit. Vitae ab pariatur dolorum assumenda nulla repellendus
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora repellat quod corrupti delectus! Nulla
         possimus perspi
@@ -64,7 +64,7 @@
         quasi esse itaque facere error cumque, corrupti, praesentium ex consequatur deserunt obcaecati iste!
       </p>
     </article>
-    <section class=" acordion container">
+    <section class="container-fluid d-flex flex-column justify-content-center aligin-items-center">
       <div class="row ">
         <div class="col-md-6 justify-content-center aligin-items-center ">
           <div class="accordion accordion-flush" id="accordionFlushExample">
@@ -106,8 +106,8 @@
               </div>
             </div>
           </div>
-
-        </div>
+        </section>
+        <section class="container-fluid d-flex flex-column justify-content-center aligin-items-center">
 
         <div class=" formulario col-md-6">
           <h2 class="tituloform">Registrate</h2>
@@ -142,13 +142,19 @@
   </main>
   <!---pie--->
   
-    <footer >
-      <div class=" d-flex flex-column justify-content-center align-items-center">
-        <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram mt-2"></i></a>
-       <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook mt-2"></i></a>
-        <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp mt-2"></i></a>
-     </div>
-    </footer>
+  <footer >
+    <div class="text-center d-flex justify-content-center align-items-center flex-column">
+      <div class="redes">
+        <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram "></i></a>
+        <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook "></i></a>
+         <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp pb-2 "></i></a>
+       </div>
+      <div>
+        <h6>Todos los derechos reservados ©</h6>
+        <h6>By Los2Primos</h6>
+    </div>
+  </div> 
+  </footer>
  
   <!---link bootstrap--->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
