--- a/pages/niñas.html
+++ b/pages/niñas.html
@@ -57,7 +57,7 @@
   <!---main--->
   <main>
     <h1 class="text-center titulo_ellas">Pensado para <span style="color: purple ">ellas</span></h1>
-    <section class="container-fluid w-100">
+    <section class="container-fluid d-flex flex-column justify-content-center aligin-items-center">
       <p class="text-center mt-2 fs-3">Camperas</p>
       <div class="row ">
         <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3  d-flex justify-content-center "><img
@@ -70,7 +70,7 @@
             src="../imagenes/campera_nena4.jpg" class="img_niñex rounded float-end mw-100 rounded" alt="campera para niñas">
         </div>
     </section>
-    <section class="container-fluid">
+    <section class="container-fluid d-flex flex-column justify-content-center aligin-items-center">
       <p class="text-center mt-2 fs-3">Remeras</p>
       <div class="row">
         <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
@@ -83,7 +83,7 @@
             src="../imagenes/remeragirld.jpg5.jpg" class=" img_niñex rounded float-end mw-100 rounded " alt="remeras para niñas">
         </div>
     </section>
-    <section class="container-fluid ">
+    <section class="container-fluid d-flex flex-column justify-content-center aligin-items-center">
       <p class="text-center mt-2 fs-3">Pantalones</p>
       <div class="row ">
         <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
@@ -103,11 +103,18 @@
   </main>
   <!---pie--->
   <footer >
-    <div class=" d-flex flex-column justify-content-center align-items-center">
-      <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram mt-2"></i></a>
-     <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook mt-2"></i></a>
-      <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp mt-2"></i></a>
-   </div>
+    <div class="text-center d-flex justify-content-center align-items-center flex-column">
+      <div class="redes">
+        <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram "></i></a>
+        <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook "></i></a>
+         <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp pb-2 "></i></a>
+       </div>
+      <div>
+        <h6>Todos los derechos reservados ©</h6>
+        <h6>By Los2Primos</h6>
+    </div>
+  </div> 
+  
   </footer>
   <!---script bootstrap--->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
