--- a/pages/niños.html
+++ b/pages/niños.html
@@ -23,8 +23,7 @@
 
 <body class="bniños d-flex flex-column">
   <header>
-    <nav
-      class="  navbar navbar-expand-lg bg-light d-flex aligin-items-center justify-content-center animate__animated animate__fadeInDownBig">
+    <nav class="  navbar navbar-expand-lg bg-light d-flex aligin-items-center justify-content-center animate__animated animate__fadeInDownBig">
       <div class="container-fluid d-flex flex-column justify-content-center aligin-items-center ">
         <a class="navbar-brand" href="../index.html">Los2Primos</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -55,58 +54,66 @@
     </nav>
   </header>
   <main>
-  <h1 class="text-center titulo_niños"><span style="color: red "> Pensado para ellos</span></h1>
-  <section class="container-fluid d-flex flex-column justify-content-center aligin-items-center">
-    <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Camperas</p>
-    <div class="row ">
-      <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center "><img
-          src="../imagenes/camp.jpg" class="img_niñex rounded float-start mw-100 rounded" alt="campera para niñas">
+    <h1 class="text-center titulo_niños"><span style="color: red "> Pensado para ellos</span></h1>
+    <section class="container-fluid d-flex flex-column justify-content-center aligin-items-center">
+      <p class="d-flex justify-content-center aligin-items-center mt-2 fs-3">Camperas</p>
+      <div class="row ">
+        <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center "><img
+            src="../imagenes/camp.jpg" class="img_niñex rounded float-start mw-100 rounded" alt="campera para niñas">
+        </div>
+        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center  "><img
+            src="../imagenes/camp3.jpg" class="img_niñex rounded mx-auto d-block mw-100 rounded"
+            alt="campera para niñas">
+        </div>
+        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center "><img
+            src="../imagenes/camp4.jpg" class="img_niñex rounded float-end mw-100 rounded" alt="campera para niñas">
+        </div>
+    </section>
+    <section class="container-fluid d-flex flex-column justify-content-center aligin-items-center">
+      <p class="text-center mt-2 fs-3">Remeras</p>
+      <div class="row">
+        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
+            src="../imagenes/boy3.jpg" class=" img_niñex rounded float-start mw-100 rounded" alt="remeras para niñas">
+        </div>
+        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
+            src="../imagenes/boy (1).jpg" class=" img_niñex rounded mx-auto d-block mw-100 rounded "
+            alt="remeras para niñas">
+        </div>
+        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
+            src="../imagenes/boy4.jpg" class=" img_niñex rounded float-end mw-100 rounded " alt="remeras para niñas">
+        </div>
+    </section>
+    <section class="container-fluid d-flex flex-column justify-content-center aligin-items-center ">
+      <p class="text-center mt-2 fs-3">Pantalones</p>
+      <div class="row ">
+        <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
+            src="../imagenes/pantalon4.jpg" class="img_niñex rounded float-start rounded mw-100 rounded   "
+            alt="pantalon para niñas">
+        </div>
+        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
+            src="../imagenes/pantalon3.jpg" class=" img_niñex rounded mx-auto d-block rounded mw-100 rounded "
+            alt="pantalon para niñas">
+        </div>
+        <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
+            src="../imagenes/pantalon2.jpg" class="img_niñex rounded float-end  mw-100 rounded"
+            alt="pantalon para niñas">
+        </div>
       </div>
-      <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center  "><img
-          src="../imagenes/camp3.jpg" class="img_niñex rounded mx-auto d-block mw-100 rounded" alt="campera para niñas">
-      </div>
-      <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center "><img
-          src="../imagenes/camp4.jpg" class="img_niñex rounded float-end mw-100 rounded" alt="campera para niñas">
-      </div>
-  </section>
-  <section class="container-fluid">
-    <p class="text-center mt-2 fs-3">Remeras</p>
-    <div class="row">
-      <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-          src="../imagenes/boy3.jpg" class=" img_niñex rounded float-start mw-100 rounded" alt="remeras para niñas">
-      </div>
-      <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-          src="../imagenes/boy (1).jpg" class=" img_niñex rounded mx-auto d-block mw-100 rounded " alt="remeras para niñas">
-      </div>
-      <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-          src="../imagenes/boy4.jpg" class=" img_niñex rounded float-end mw-100 rounded " alt="remeras para niñas">
-      </div>
-  </section>
-  <section class="container-fluid ">
-    <p class="text-center mt-2 fs-3">Pantalones</p>
-    <div class="row ">
-      <div class="col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-          src="../imagenes/pantalon4.jpg" class="img_niñex rounded float-start rounded mw-100 rounded   " alt="pantalon para niñas"
-          >
-      </div>
-      <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-          src="../imagenes/pantalon3.jpg" class=" img_niñex rounded mx-auto d-block rounded mw-100 rounded " alt="pantalon para niñas"
-         >
-      </div>
-      <div class=" col-xs-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 pt-3 d-flex justify-content-center"><img
-          src="../imagenes/pantalon2.jpg" class="img_niñex rounded float-end  mw-100 rounded" alt="pantalon para niñas"
-          >
-      </div>
-    </div>
-  </section>
-</main>
+    </section>
+  </main>
   <!---pie--->
   <footer >
-    <div class=" d-flex flex-column justify-content-center align-items-center">
-      <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram mt-2"></i></a>
-     <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook mt-2"></i></a>
-      <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp mt-2"></i></a>
-   </div>
+    <div class="text-center d-flex justify-content-center align-items-center flex-column">
+      <div class="redes">
+        <a href="https://www.instagram.com/los_2_primos2/"><i class="fa-brands fa-instagram "></i></a>
+        <a href="https://www.facebook.com/profile.php?id=100086224144834"><i class="fa-brands fa-facebook "></i></a>
+         <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp pb-2 "></i></a>
+       </div>
+      <div>
+        <h6>Todos los derechos reservados ©</h6>
+        <h6>By Los2Primos</h6>
+    </div>
+  </div> 
   </footer>
   <!---script bootstrap--->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
