--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -30,7 +30,7 @@
 
 <body class="bnosotros d-flex flex-column">
   <nav class=" navbar navbar-expand-lg bg-light animate__animated animate__fadeInDownBig ">
-    <div class="container-fluid d-flex flex-column justify-content-center aligin-items-center w-100 ">
+    <div class="container-fluid d-flex flex-column justify-content-center aligin-items-center ">
       <a class="navbar-brand" href="../index.html">Los2Primos</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -59,12 +59,10 @@
     </div>
   </nav>
   <main>
-    
-    <section class="container">
-      <div class="row">
-        <div class="col-md-6 mx-auto">
-          <h1 class=" titulo fs-1 d-flex justify-content-center aligin-items-center mt-2">Nuestra Historia</h1>
-          <p class="parrafo fs-5 fst-italic justify-content-center aligin-items-center w-100">es una empresa familia, que cuenta con 3 años de
+    <section class="container-fluid">
+      <div class=" nosotros d-flex justify-content-center align-items-center flex-column w-100 ">
+            <h1 class="text-center">Nuestra Historia</h1>
+          <p>es una empresa familia, que cuenta con 3 años de
             trayectoria en el mercado de indumentaria para bebes y niños, de 0 a 14 años y que cada temporada propone
             looks diferentes.
             Nació con un pequeño proyecto entre hermanos, y en la actualidad, cuenta con un local propios en Jose Leon Suarez, y
@@ -74,11 +72,13 @@
             divertidas, especialmente confeccionadas con telas que resistan la diversión y libertad de los niños. Contando
             además con líneas de accesorios, tejidos y calzados pensados para toda hora e inspirados en el mundo.
           </p>
-        </div>
-        <div class="col-md-6 d-flex justify-content-center ">
-          <img class=" rounded-4 mb-4 animate__animated animate__fadeInTopRight mt-5" src="../imagenes/fund.jpg" alt="fundadores" width="386px" height="286px">
-        </div> 
-  </section>
+        </div >
+    </div>
+    <img src="../imagenes/fund.jpg" class="rounded mx-auto d-block img-fluid" alt="...">
+    </section>
+   
+  
+  </main>
     <!---pie--->
     <footer  >
       <div class=" d-flex justify-content-center align-items-center ">
